--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node models/seeds/CategorySeeder.js"
+    "seed": "node models/seeds/CategorySeeder.js && node models/seeds/RecordSeeder.js"
   },
   "keywords": [],
   "author": "",
